tests/functional/lang/eval-fail-filterSource-1.err.exp
error:
       … while calling the 'filterSource' builtin
         at /pwd/lang/eval-fail-filterSource-1.nix:1:1:
            1| builtins.filterSource [ ] [ ]
             | ^
            2|

       … while evaluating the second argument (the path to filter) passed to 'builtins.filterSource'

       error: cannot coerce a list to a string: [ ]
